--- a/RealToors/Homepage.html
+++ b/RealToors/Homepage.html
@@ -18,12 +18,12 @@
                 Involved by exploring our site.
             </article>
             <article class="main">
-                <ul class="pages"> 
-                    <li class="page"><a href="./AboutUs.html"><img src="pics/3.png" alt="About Us" height="325" width="325"></a><br>About Us</li>  
-                    <li class="page"><a href="./Events.html"><img src="pics/Earth.png" alt="Events" height="325" width="325"></a><br> Events</li>  
-                    <li class="page"><a href="./AddEvents.html"><img src="pics/Plus.png" alt="Add Events" height="325" width="325"></a><br> Add Events</li>  
-                    <li class="page"<a href="./ContactUs.html"><img src="pics/envelope.png" alt="Add Events" height="325" width="325"></a><br> Contact Us</li>
-                </ul>
+            <ul class="pages"> 
+                <li class="page"><a href="./AboutUs.html"><img src="pics/3.png" alt="About Us" height="325" width="325"></a><br>About Us</li>  
+                <li class="page"><a href="./Events.html"><img src="pics/Earth.png" alt="Events" height="325" width="325"></a><br> Events</li>  
+                <li class="page"><a href="./AddEvents.html"><img src="pics/Plus.png" alt="Add Events" height="325" width="325"></a><br> Add Events</li>  
+                <li class="page"><a href="./ContactUs.html"><img src="pics/envelope.png" alt="Add Events" height="325" width="325"></a><br> Contact Us</li>
+            </ul>
             </article> 
             <aside class="aside aside-1">
                 <button class="button" type="button" name="login" value="register">Log in</button> <br>
