--- a/RealToors/ContactUs.html
+++ b/RealToors/ContactUs.html
@@ -8,8 +8,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <script src="scripts.js"></script>
         <div class="wrapper">
-            <header class='header'><a href="./Homepage.html"><img src="pics/RealToors.jpg" alt="RealToor"></a></header>
+            <header class='header'><a href="./Homepage.html"><img src="pics/RealToors.jpg" alt="RealToor"></a>
+                <div> 
+                    <button id="button" type="button" name="login" value="register" onclick="openNav()">&#9977; Log in/Register &#9977;</button>
+                    <div id="TheSideBar" class="SideBar">
+                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                        <form class="" name="login" action="login.php" method="GET">
+                        <h1>Login: </h1>
+                        User Name: <br><input type="text" name="UN"> <br>
+                        Password: <br><input type="password" name="PW"> <br>
+                        <button id="login" type="button" name="login" onsubmit="login.php">Login.</button> <br>
+                        <button id="login" type="button" name="register" onclick="register.php">Need to register?</button>
+                    </div>
+                </div>
+            </header>
             <ul class="navigation"> 
                 <li><a href="./AboutUs.html">About Us</a></li>  
                 <li><a href="./Events.html"> Events</a></li>  
@@ -19,10 +33,7 @@
             <article class="main">
                 Contact information.
             </article> 
-            <aside class="aside aside-1">
-                <button class="button" type="button" name="login" value="register">Log in</button> <br>
-                <button class="button" type="button" name="register" value="register">Register</button>
-            </aside>
+            <aside class="aside aside-1"></aside>
             <aside class="aside aside-2"></aside>
             <footer class="footer">Created By: <br> JEKSAR</footer>
         
