--- a/RealToors/Homepage.html
+++ b/RealToors/Homepage.html
@@ -8,14 +8,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <script src="scripts.js"></script>
+        
         <div class="wrapper">
-            <header class='header'><a href="./Homepage.html"><img src="pics/RealToors.jpg" alt="RealToor"></a></header>
+            <header class='header'><a href="./Homepage.html"><img src="pics/RealToors.jpg" alt="RealToor"></a>
+                <div> 
+                    <button id="button" type="button" name="login" value="register" onclick="openNav()">&#9977; Log in/Register &#9977;</button>
+                    <div id="TheSideBar" class="SideBar">
+                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                        <form class="" name="login" action="login.php" method="GET">
+                        <h1>Login: </h1>
+                        User Name: <br><input type="text" name="UN"> <br>
+                        Password: <br><input type="password" name="PW"> <br>
+                        <button id="login" type="button" name="login" onsubmit="login.php">Login.</button> <br>
+                        <button id="login" type="button" name="register" onclick="register.php">Need to register?</button>
+                    </div>
+                </div>
+            
+            </header>
             <article class="navigation" style="color:snow;">
                 Welcome to RealToors! <br>
-                RealToors is the home for fun biking events all around the
-                Philadelphia area. Whether you're looking for a race or a <br> 
-                casual tour of the city, we have events waiting for you! Get
-                Involved by exploring our site.
+                RealToors is the home for many great biking events all around the Philadelphia area. Whether you are <br> 
+                looking for a race or a casual tour of the city, we have events waiting for you! Get involved by exploring our site.
             </article>
             <article class="main">
             <ul class="pages"> 
@@ -26,8 +40,6 @@
             </ul>
             </article> 
             <aside class="aside aside-1">
-                <button class="button" type="button" name="login" value="register">Log in</button> <br>
-                <button class="button" type="button" name="register" value="register">Register</button>
             </aside>
             <aside class="aside aside-2"></aside>
             <footer class="footer">Created By: <br> JEKSAR</footer>
