--- a/RealToors/ContactUs.html
+++ b/RealToors/ContactUs.html
@@ -12,7 +12,7 @@
         <div class="wrapper">
             <header class='header'><a href="./Homepage.html"><img src="pics/RealToors.jpg" alt="RealToor"></a>
                 <div> 
-                    <button id="button" type="button" name="login" value="register" onclick="openNav()">&#9977; Log in/Register &#9977;</button>
+                    <button id="button" type="button" name="login" value="register" onclick="openNav()">&#9977; Admin Login &#9977;</button>
                     <div id="TheSideBar" class="SideBar">
                         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                         <form class="" name="login" action="login.php" method="GET">
@@ -20,14 +20,13 @@
                         User Name: <br><input type="text" name="UN"> <br>
                         Password: <br><input type="password" name="PW"> <br>
                         <button id="login" type="button" name="login" onsubmit="login.php">Login.</button> <br>
-                        <button id="login" type="button" name="register" onclick="register.php">Need to register?</button>
                     </div>
                 </div>
             </header>
             <ul class="navigation"> 
                 <li><a href="./AboutUs.html">About Us</a></li>  
-                <li><a href="./Events.html"> Events</a></li>  
-                <li><a href="./AddEvents.html"> Add Events</a></li>  
+                <li><a href="./Events.php"> Events</a></li>  
+                <li><a href="./AddEvents.html"> Create an Event</a></li>  
                 <li><a href="./ContactUs.html"> Contact Us</a></li>
             </ul>
             <article class="main">
