--- a/RealToors/Homepage.html
+++ b/RealToors/Homepage.html
@@ -13,15 +13,15 @@
         <div class="wrapper">
             <header class='header'><a href="./Homepage.html"><img src="pics/RealToors.jpg" alt="RealToor"></a>
                 <div> 
-                    <button id="button" type="button" name="login" value="register" onclick="openNav()">&#9977; Log in/Register &#9977;</button>
+                    <button id="button" type="button" name="login" value="register" onclick="openNav()">&#9977; Admin Login &#9977;</button>
                     <div id="TheSideBar" class="SideBar">
                         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                        <form class="" name="login" action="login.php" method="GET">
+                        <form class="" name="login" action="LoginAction.php" method="POST">
                         <h1>Login: </h1>
                         User Name: <br><input type="text" name="UN"> <br>
                         Password: <br><input type="password" name="PW"> <br>
-                        <button id="login" type="button" name="login" onsubmit="login.php">Login.</button> <br>
-                        <button id="login" type="button" name="register" onclick="register.php">Need to register?</button>
+                        <input id="login" type="submit" name="login" onsubmit="LoginAction.php"><br>
+                        </form>
                     </div>
                 </div>
             
@@ -34,8 +34,8 @@
             <article class="main">
             <ul class="pages"> 
                 <li class="page"><a href="./AboutUs.html"><img src="pics/3.png" alt="About Us" height="325" width="325"></a><br>About Us</li>  
-                <li class="page"><a href="./Events.html"><img src="pics/Earth.png" alt="Events" height="325" width="325"></a><br> Events</li>  
-                <li class="page"><a href="./AddEvents.html"><img src="pics/Plus.png" alt="Add Events" height="325" width="325"></a><br> Add Events</li>  
+                <li class="page"><a href="./Events.php"><img src="pics/Earth.png" alt="Events" height="325" width="325"></a><br> Upcoming events</li>  
+                <li class="page"><a href="./AddEvents.html"><img src="pics/Plus.png" alt="Add Events" height="325" width="325"></a><br> Create your own event</li>  
                 <li class="page"><a href="./ContactUs.html"><img src="pics/envelope.png" alt="Add Events" height="325" width="325"></a><br> Contact Us</li>
             </ul>
             </article> 
